workspace-sf/force-app/main/default/objects/Sinistro_Event__e/Sinistro_Event__e.object-meta.xml
<CustomObject>
    <label>Sinistro Event</label>
    <pluralLabel>Sinistro Events</pluralLabel>
</CustomObject>