workspace-sf/force-app/main/default/objects/Sinistro_Event__e/fields/AnaliseMedica__c.field-meta.xml
<CustomField>
    <fullName>AnaliseMedica__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AnaliseMedica</label>
    <type>Checkbox</type>
</CustomField>