workspace-sf/force-app/main/default/objects/Sinistro_Event__e/fields/Contato__c.field-meta.xml
<CustomField>
    <fullName>Contato__c</fullName>
    <label>Contato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>