workspace-sf/force-app/main/default/objects/Sinistro_Event__e/fields/Corretor__c.field-meta.xml
<CustomField>
    <fullName>Corretor__c</fullName>
    <label>Corretor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>