workspace-sf/force-app/main/default/objects/Sinistro_Event__e/fields/CRM__c.field-meta.xml
<CustomField>
    <fullName>CRM__c</fullName>
    <label>CRM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>