workspace-sf/force-app/main/default/objects/Sinistro_Event__e/fields/CusteadorSeguro__c.field-meta.xml
<CustomField>
    <fullName>CusteadorSeguro__c</fullName>
    <label>CusteadorSeguro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>