workspace-sf/force-app/main/default/objects/Sinistro_Event__e/fields/DataEntradaDocumentos__c.field-meta.xml
<CustomField>
    <fullName>DataEntradaDocumentos__c</fullName>
    <label>DataEntradaDocumentos</label>
    <type>Date</type>
</CustomField>