workspace-sf/force-app/main/default/objects/Sinistro_Event__e/fields/DataHoraAbertura__c.field-meta.xml
<CustomField>
    <fullName>DataHoraAbertura__c</fullName>
    <label>DataHoraAbertura</label>
    <type>DateTime</type>
</CustomField>