workspace-sf/force-app/main/default/objects/Sinistro_Event__e/fields/DataOcorrencia__c.field-meta.xml
<CustomField>
    <fullName>DataOcorrencia__c</fullName>
    <label>DataOcorrencia</label>
    <type>Date</type>
</CustomField>