workspace-sf/force-app/main/default/objects/Sinistro_Event__e/fields/DataProgramadaPagamento__c.field-meta.xml
<CustomField>
    <fullName>DataProgramadaPagamento__c</fullName>
    <label>DataProgramadaPagamento</label>
    <type>Date</type>
</CustomField>