workspace-sf/force-app/main/default/objects/Sinistro_Event__e/fields/DescricaoEvento__c.field-meta.xml
<CustomField>
    <fullName>DescricaoEvento__c</fullName>
    <label>DescricaoEvento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>