workspace-sf/force-app/main/default/objects/Sinistro_Event__e/fields/EmailContato__c.field-meta.xml
<CustomField>
    <fullName>EmailContato__c</fullName>
    <label>EmailContato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>