workspace-sf/force-app/main/default/objects/Sinistro_Event__e/fields/EmailCorretor__c.field-meta.xml
<CustomField>
    <fullName>EmailCorretor__c</fullName>
    <label>EmailCorretor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>