workspace-sf/force-app/main/default/objects/Sinistro_Event__e/fields/Fraude__c.field-meta.xml
<CustomField>
    <fullName>Fraude__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fraude</label>
    <type>Checkbox</type>
</CustomField>