workspace-sf/force-app/main/default/objects/Sinistro_Event__e/fields/GarantiaContrato__c.field-meta.xml
<CustomField>
    <fullName>GarantiaContrato__c</fullName>
    <label>GarantiaContrato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>