workspace-sf/force-app/main/default/objects/Sinistro_Event__e/fields/Motivo__c.field-meta.xml
<CustomField>
    <fullName>Motivo__c</fullName>
    <label>Motivo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>