workspace-sf/force-app/main/default/objects/Sinistro_Event__e/fields/NomeMedico__c.field-meta.xml
<CustomField>
    <fullName>NomeMedico__c</fullName>
    <label>NomeMedico</label>
    <length>255</length>
    <type>Text</type>
</CustomField>