workspace-sf/force-app/main/default/objects/Sinistro_Event__e/fields/NumeroSinistro__c.field-meta.xml
<CustomField>
    <fullName>NumeroSinistro__c</fullName>
    <label>NumeroSinistro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>