workspace-sf/force-app/main/default/objects/Sinistro_Event__e/fields/OrigemDocumentos__c.field-meta.xml
<CustomField>
    <fullName>OrigemDocumentos__c</fullName>
    <label>OrigemDocumentos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>