workspace-sf/force-app/main/default/objects/Sinistro_Event__e/fields/ParecerMedico__c.field-meta.xml
<CustomField>
    <fullName>ParecerMedico__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ParecerMedico</label>
    <type>Checkbox</type>
</CustomField>