workspace-sf/force-app/main/default/objects/Sinistro_Event__e/fields/PeriodoAfastamento__c.field-meta.xml
<CustomField>
    <fullName>PeriodoAfastamento__c</fullName>
    <label>PeriodoAfastamento</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>