workspace-sf/force-app/main/default/objects/Sinistro_Event__e/fields/PossuiAcaoJudicial__c.field-meta.xml
<CustomField>
    <fullName>PossuiAcaoJudicial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PossuiAcaoJudicial</label>
    <type>Checkbox</type>
</CustomField>