workspace-sf/force-app/main/default/objects/Sinistro_Event__e/fields/ProfissaoDeclaradaMesmaApurada__c.field-meta.xml
<CustomField>
    <fullName>ProfissaoDeclaradaMesmaApurada__c</fullName>
    <label>ProfissaoDeclaradaMesmaApurada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>