workspace-sf/force-app/main/default/objects/Sinistro_Event__e/fields/Resseguro__c.field-meta.xml
<CustomField>
    <fullName>Resseguro__c</fullName>
    <label>Resseguro</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>