workspace-sf/force-app/main/default/objects/Sinistro_Event__e/fields/ValorIndenizado__c.field-meta.xml
<CustomField>
    <fullName>ValorIndenizado__c</fullName>
    <label>ValorIndenizado</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>