workspace-sf/force-app/main/default/objects/Sinistro_Event__e/fields/ValorIRB__c.field-meta.xml
<CustomField>
    <fullName>ValorIRB__c</fullName>
    <label>ValorIRB</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>