workspace-sf/force-app/main/default/objects/Sinistro_Event__e/fields/Vitima__c.field-meta.xml
<CustomField>
    <fullName>Vitima__c</fullName>
    <label>Vitima</label>
    <length>255</length>
    <type>Text</type>
</CustomField>